# markdown-journal-rust

./: .gitignore  CLAUDE.md  README.md  generate-weekly-weight-graph.sh  index-journal.sh  mjr  query-frontmatter.sh  reindex-rag.sh  search-rag.sh  setup_arch_environment.sh  setup_mac_environment.sh  setup_ubuntu_environment.sh  start-server.sh  stop-server.sh
.claude/: settings.json
.claude/agents/: daily-summary.md  journal-field-completer.md  journal-rag-search.md  weekly-retro-analyzer.md
.claude/commands/: commit.md  complete_previous_day.md  start.md
.tech/code/rust_scripts/frontmatter_query/: Cargo.toml
.tech/code/rust_scripts/frontmatter_query/src/: main.rs
.tech/code/rust_scripts/frontmatter_query/tests/: cli.rs
.tech/code/rust_scripts/rag_search/: Cargo.toml
.tech/code/rust_scripts/rag_search/rag-index/: Cargo.toml
.tech/code/rust_scripts/rag_search/rag-index/src/: embeddings_http.rs  keyword_tantivy.rs  main.rs  template_filter.rs  usearch_store.rs
.tech/code/rust_scripts/rag_search/rag-search/: Cargo.toml
.tech/code/rust_scripts/rag_search/rag-search/src/: embeddings_http.rs  keyword_tantivy.rs  main.rs
.tech/code/scripts/weight-analysis/: WEIGHT_ANALYSIS_README.md  setup_venv.sh  weight_analysis.py
embedding_service/: README.md  requirements.txt  service.py
template/: daily.md  daily_summary.md  person.md  weekend.md
