[workspace]
members = ["rag-index", "rag-search"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Estevao Machado"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
anyhow = "1.0"
gray_matter = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
usearch = "2.16"
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"
