[package]
name = "rag-index"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
walkdir.workspace = true
anyhow.workspace = true
gray_matter.workspace = true
tokio.workspace = true
reqwest.workspace = true
usearch.workspace = true
rusqlite.workspace = true
tantivy.workspace = true
