[package]
name = "rag-search"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
usearch.workspace = true
rusqlite.workspace = true
tantivy.workspace = true
